--- a/SigTest.ipynb
+++ b/SigTest.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
        "4  2000       68.5"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
        "          36.6]])]"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,19 +234,20 @@
     "for year in df['Year'].unique():\n",
     "    values = df[df['Year'] == year]\n",
     "    values.drop(['Year'], axis=1, inplace=True)\n",
-    "    data.append((values.to_numpy()).transpose())\n"
+    "    data.append(values.to_numpy().transpose())\n",
+    "data\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Statistics=388530.000, p=0.000\n"
+      "Statistics=291745.823, p=0.000\n"
      ]
     }
    ],
