Kruskall-Wallis Test

--- a/SigTest.ipynb
+++ b/SigTest.ipynb
@@ -332,6 +332,64 @@
     "<b>Result of Nemenyi Post-hoc test:</b> The most significant difference is between values for year 2000 and 2015 and 2012 respectively. \n",
     "</div>"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Kruskall–Wallis Test\n",
+    "This test can be used to determine whether more than two independent samples have a different distribution."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.stats import kruskal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Statistics=5.816, p=0.121\n",
+      "Same distributions (fail to reject H0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "stat, p = kruskal(data[0], data[1], data[2], data[3])\n",
+    "print('Statistics=%.3f, p=%.3f' % (stat, p))\n",
+    "# interpret\n",
+    "alpha = 0.05\n",
+    "if p > alpha:\n",
+    "    print('Same distributions (fail to reject H0)')\n",
+    "else:\n",
+    "    print('Different distributions (reject H0)')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-info\">\n",
+    "<b>Result of Kruskall-Wallis test:</b> If we remove the results of year 2000 then the test shows same distribution. This result is also comatible with pariwise Nemenyi test. \n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
