Mann-Whitney U Test

--- a/SigTest.ipynb
+++ b/SigTest.ipynb
@@ -385,6 +385,51 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Mann-Whitney U Test\n",
+    "The Mann-Whitney U test is a nonparametric statistical significance test for determining whether two independent samples were drawn from a population with the same distribution.\n",
+    "Use this test to see if the mean value of last years have the same distribution with the last year."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Statistics=7868.500, p=0.369\n",
+      "Same distribution (fail to reject H0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.stats import mannwhitneyu\n",
+    "mean_lasts = (data[0] + data[1])/2\n",
+    "stat, p = mannwhitneyu(data[0], mean_lasts)\n",
+    "print('Statistics=%.3f, p=%.3f' % (stat, p))\n",
+    "# interpret\n",
+    "alpha = 0.05\n",
+    "if p > alpha:\n",
+    "\tprint('Same distribution (fail to reject H0)')\n",
+    "else:\n",
+    "\tprint('Different distribution (reject H0)')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-info\">\n",
+    "<b>Result of Mann-Whitney U Test,</b> shows if we make a sample which is the mean value of the last two years, then this new sample would have the same distribution as the last year, which is cosistent   \n",
+    "</div>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
