revise sigtest for genders

--- a/SigTest.ipynb
+++ b/SigTest.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -89,27 +89,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>2015</td>\n",
-       "      <td>58.8</td>\n",
+       "      <td>29.40</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2012</td>\n",
-       "      <td>60.3</td>\n",
+       "      <td>30.15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2010</td>\n",
-       "      <td>61.8</td>\n",
+       "      <td>30.90</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2005</td>\n",
-       "      <td>64.8</td>\n",
+       "      <td>32.40</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2000</td>\n",
-       "      <td>68.5</td>\n",
+       "      <td>34.25</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -117,22 +117,22 @@
       ],
       "text/plain": [
        "   Year  Total_Use\n",
-       "0  2015       58.8\n",
-       "1  2012       60.3\n",
-       "2  2010       61.8\n",
-       "3  2005       64.8\n",
-       "4  2000       68.5"
+       "0  2015      29.40\n",
+       "1  2012      30.15\n",
+       "2  2010      30.90\n",
+       "3  2005      32.40\n",
+       "4  2000      34.25"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Calculates the total usage for both genders. And drop unnecessary columns.\n",
-    "df['Total_Use'] = df['Male'] + df['Female']\n",
-    "df.drop(['Male', 'Female', 'Country'] , axis=1, inplace=True)\n",
+    "df['Total_Use'] = (df['Male'] + df['Female']) / 2 # Equal gender diversity is assumed. how\n",
+    "df.drop(['Female', 'Male', 'Country'] , axis=1, inplace=True)\n",
     "df.drop(df.columns[df.columns.str.contains('unnamed',case = False)],axis = 1, inplace = True)\n",
     "df.drop([0])\n",
     "df.head()"
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +276,7 @@
        "2015  0.008762  0.280471  0.926107  0.990217 -1.000000"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,17 +290,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(<matplotlib.axes._subplots.AxesSubplot at 0x7fe837d671d0>,\n",
-       " <matplotlib.colorbar.ColorbarBase at 0x7fe837cd5630>)"
+       "(<matplotlib.axes._subplots.AxesSubplot at 0x7f4f72d51518>,\n",
+       " <matplotlib.colorbar.ColorbarBase at 0x7f4f72cb5e48>)"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -425,16 +425,9 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-info\">\n",
-    "<b>Result of Mann-Whitney U Test,</b> shows if we make a sample which is the mean value of the last two years, then this new sample would have the same distribution as the last year, which is cosistent   \n",
+    "<b>Result of Mann-Whitney U Test,</b> shows if we make a sample which is the mean value of the last two years, then this new sample would have the same distribution as the last year, which is cosistent with the results of Kruskall-Wallis Test.  \n",
     "</div>"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
