--- a/SigTest.ipynb
+++ b/SigTest.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,16 +48,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('data/Clean_Data/cl-tobac-use.csv')"
+    "df = pd.read_csv('data/tobac_use_by_country.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -81,33 +81,39 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>index</th>\n",
        "      <th>Year</th>\n",
        "      <th>Total_Use</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>2015</td>\n",
        "      <td>29.40</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>2012</td>\n",
        "      <td>30.15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
        "      <td>2010</td>\n",
        "      <td>30.90</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
        "      <td>2005</td>\n",
        "      <td>32.40</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
        "      <td>2000</td>\n",
        "      <td>34.25</td>\n",
        "    </tr>\n",
@@ -116,15 +122,15 @@
        "</div>"
       ],
       "text/plain": [
-       "   Year  Total_Use\n",
-       "0  2015      29.40\n",
-       "1  2012      30.15\n",
-       "2  2010      30.90\n",
-       "3  2005      32.40\n",
-       "4  2000      34.25"
+       "   index  Year  Total_Use\n",
+       "0      0  2015      29.40\n",
+       "1      1  2012      30.15\n",
+       "2      2  2010      30.90\n",
+       "3      3  2005      32.40\n",
+       "4      4  2000      34.25"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,7 +146,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  4.,   9.,  14.,  19.,  24.,  29.,  34.,  39.,  44.,  49.,  54.,\n",
+       "        59.,  64.,  69.,  74.,  79.,  84.,  89.,  94.,  99., 104., 109.,\n",
+       "       114., 119., 124., 129., 134., 139., 144., 149., 154., 159., 164.,\n",
+       "       169., 174., 179., 184., 189., 194., 199., 204., 209., 214., 219.,\n",
+       "       224., 229., 234., 239., 244., 249., 254., 259., 264., 269., 274.,\n",
+       "       279., 284., 289., 294., 299., 304., 309., 314., 319., 324., 329.,\n",
+       "       334., 339., 344., 349., 354., 359., 364., 369., 374., 379., 384.,\n",
+       "       389., 394., 399., 404., 409., 414., 419., 424., 429., 434., 439.,\n",
+       "       444., 449., 454., 459., 464., 469., 474., 479., 484., 489., 494.,\n",
+       "       499., 504., 509., 514., 519., 524., 529., 534., 539., 544., 549.,\n",
+       "       554., 559., 564., 569., 574., 579., 584., 589., 594., 599., 604.,\n",
+       "       609., 614., 619., 624., 629., 634.])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "values.to_numpy().transpose()[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,7 +483,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
