--- a/DataCleaning.ipynb
+++ b/DataCleaning.ipynb
@@ -180,35 +180,35 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>Albania</td>\n",
        "      <td>2015</td>\n",
        "      <td>51.2</td>\n",
        "      <td>7.6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>Andorra</td>\n",
        "      <td>2015</td>\n",
        "      <td>37.2</td>\n",
        "      <td>27.8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>Argentina</td>\n",
        "      <td>2015</td>\n",
        "      <td>29.5</td>\n",
        "      <td>18.4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>Armenia</td>\n",
        "      <td>2015</td>\n",
        "      <td>52.3</td>\n",
        "      <td>1.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>Australia</td>\n",
        "      <td>2015</td>\n",
        "      <td>16.7</td>\n",
@@ -336,27 +336,27 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>Afghanistan</td>\n",
        "      <td>3.425</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>Albania</td>\n",
        "      <td>65.195</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>Algeria</td>\n",
        "      <td>36.135</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>Andorra</td>\n",
        "      <td>71.350</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>Antigua and Barbuda</td>\n",
        "      <td>15.050</td>\n",
        "    </tr>\n",
@@ -446,27 +446,27 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>Switzerland</td>\n",
        "      <td>7.587</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>Iceland</td>\n",
        "      <td>7.561</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>Denmark</td>\n",
        "      <td>7.527</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>Norway</td>\n",
        "      <td>7.522</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>Canada</td>\n",
        "      <td>7.427</td>\n",
        "    </tr>\n",
@@ -541,7 +541,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>Afghanistan</td>\n",
        "      <td>NaN</td>\n",
        "      <td>4.48%</td>\n",
@@ -556,7 +556,7 @@
        "      <td>No*</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>Albania</td>\n",
        "      <td>NaN</td>\n",
        "      <td>3.55%</td>\n",
@@ -571,7 +571,7 @@
        "      <td>No*</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>Algeria</td>\n",
        "      <td>NaN</td>\n",
        "      <td>2.19%</td>\n",
@@ -586,7 +586,7 @@
        "      <td>Yes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>Andorra</td>\n",
        "      <td>NaN</td>\n",
        "      <td>. . .</td>\n",
@@ -601,7 +601,7 @@
        "      <td>. . .</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>Angola</td>\n",
        "      <td>NaN</td>\n",
        "      <td>1.63%</td>\n",
@@ -730,27 +730,27 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>Afghanistan</td>\n",
        "      <td>4.995</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>Albania</td>\n",
        "      <td>3.920</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>Algeria</td>\n",
        "      <td>2.690</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>Andorra</td>\n",
        "      <td>1.070</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>Angola</td>\n",
        "      <td>3.310</td>\n",
        "    </tr>\n",
@@ -970,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -979,7 +979,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Replace blank values in column Warn_score with mean of the other values.\n",
+    "tobacco_data['Warn_Score'] = tobacco_data['Warn_Score'].replace({'^': 0})\n",
+    "tobacco_data['Warn_Score'] = tobacco_data['Warn_Score'].astype(float)\n",
+    "warn_mean = tobacco_data[\"Warn_Score\"].mean()\n",
+    "tobacco_data['Warn_Score'] = tobacco_data['Warn_Score'].replace(0, warn_mean)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1019,7 +1032,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>Albania</td>\n",
        "      <td>2015</td>\n",
        "      <td>51.2</td>\n",
@@ -1030,11 +1043,11 @@
        "      <td>8</td>\n",
        "      <td>8</td>\n",
        "      <td>3</td>\n",
-       "      <td>50</td>\n",
+       "      <td>50.0</td>\n",
        "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>Argentina</td>\n",
        "      <td>2015</td>\n",
        "      <td>29.5</td>\n",
@@ -1045,11 +1058,11 @@
        "      <td>7</td>\n",
        "      <td>10</td>\n",
        "      <td>5</td>\n",
-       "      <td>50</td>\n",
+       "      <td>50.0</td>\n",
        "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>Armenia</td>\n",
        "      <td>2015</td>\n",
        "      <td>52.3</td>\n",
@@ -1060,11 +1073,11 @@
        "      <td>5</td>\n",
        "      <td>2</td>\n",
        "      <td>0</td>\n",
-       "      <td>50</td>\n",
+       "      <td>50.0</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>Australia</td>\n",
        "      <td>2015</td>\n",
        "      <td>16.7</td>\n",
@@ -1075,11 +1088,11 @@
        "      <td>6</td>\n",
        "      <td>2</td>\n",
        "      <td>0</td>\n",
-       "      <td>83</td>\n",
+       "      <td>83.0</td>\n",
        "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>Austria</td>\n",
        "      <td>2015</td>\n",
        "      <td>35.5</td>\n",
@@ -1090,7 +1103,7 @@
        "      <td>7</td>\n",
        "      <td>8</td>\n",
        "      <td>5</td>\n",
-       "      <td>65</td>\n",
+       "      <td>65.0</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1112,15 +1125,15 @@
        "3        2.285                  6                   2   \n",
        "4        1.225                  7                   8   \n",
        "\n",
-       "   Ban_Score_add_indir_ads Warn_Score  Ban_Score_places  \n",
-       "0                        3         50                 8  \n",
-       "1                        5         50                 8  \n",
-       "2                        0         50                 3  \n",
-       "3                        0         83                 6  \n",
-       "4                        5         65                 2  "
+       "   Ban_Score_add_indir_ads  Warn_Score  Ban_Score_places  \n",
+       "0                        3        50.0                 8  \n",
+       "1                        5        50.0                 8  \n",
+       "2                        0        50.0                 3  \n",
+       "3                        0        83.0                 6  \n",
+       "4                        5        65.0                 2  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1131,12 +1144,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "tobacco_data.to_csv(\"data/tobacco_data.csv\", index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
