--- a/Analytics.ipynb
+++ b/Analytics.ipynb
@@ -904,10 +904,10 @@
    "metadata": {},
    "source": [
     "#### Analytics:\n",
-    "As could be seen on correlation matrix, tobacco usage of men is negatively impacted by happiness and advertisement limitations which makes sense. However, there is no indicator which impact on Men tobacco consumpation. \n",
-    "Among all it can be seen that tax is the most important influencer of men consumption, which is against what governments claim about it, but this impact is not much significant. There is only one other indicator which has positive impact on men tobacco usage, which is limitation on places where smoking is allowed. Howere this impact is not much cosiderable.\n",
+    "As it can be seen with correlation matrix, tobacco usage of men is negatively impacted by happiness and advertisement limitations which makes sense that boosting in happiness increasing the limitation on advertisement, cause less willingness to smoke. However, there is no indicator which has significant positive relation with Men tobacco consumpation. \n",
+    "Among all it can be seen that tax is the most important influencer of men consumption, which is against what governments claim about it, but this impact is not much significant. There is only one other indicator which has positive impact on men tobacco usage, which is the limitation on places where smoking is allowed. Howere this impact is not much cosiderable (around 1 percent).\n",
     "\n",
-    "On the other side, women are more influenced by these indicators, as tax an happiness cause more tobacco usage between women, that although show different habitat between women, confirm our hypothesis about tax which increasing the tax won't cause decrease on tobacco usage. However it seems tobacco usage between women is mostly for fun and not one regular habitate.  \n",
+    "On the other side, women are more influenced by these indicators, as tax and happiness cause more tobacco usage between women, that although show different habitat between women, confirm our hypothesis about tax which the more tax won't cause the less tobacco usage. However it seems tobacco usage between women is mostly for fun and not one regular habitate.  \n",
     "\n",
     "However, the negative correlation between affordability and women tobacco usage shows that the more affordable women (who could be from wealty class) are less likely to smoke and this could be because of more alternative fun for wealty women.  "
    ]
