Final regression model for men tobacco cosumption

--- a/DataCleaning.ipynb
+++ b/DataCleaning.ipynb
@@ -240,12 +240,175 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Tobacco Tax"
+    "# Tobacco Price"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country</th>\n",
+       "      <th>2016</th>\n",
+       "      <th>2014</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>0.44</td>\n",
+       "      <td>0.35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>Albania</td>\n",
+       "      <td>1.88</td>\n",
+       "      <td>1.93</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>1.90</td>\n",
+       "      <td>1.91</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>Andorra</td>\n",
+       "      <td>3.89</td>\n",
+       "      <td>4.68</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>Angola</td>\n",
+       "      <td>. . .</td>\n",
+       "      <td>2.06</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Country   2016  2014\n",
+       "0  Afghanistan   0.44  0.35\n",
+       "1      Albania   1.88  1.93\n",
+       "2      Algeria   1.90  1.91\n",
+       "3      Andorra   3.89  4.68\n",
+       "4       Angola  . . .  2.06"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tobac_price = pd.read_csv('data/price.csv')\n",
+    "\n",
+    "tobac_price.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/andrew/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:6: FutureWarning: \n",
+      ".ix is deprecated. Please use\n",
+      ".loc for label based indexing or\n",
+      ".iloc for positional indexing\n",
+      "\n",
+      "See the documentation here:\n",
+      "http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#ix-indexer-is-deprecated\n",
+      "  \n",
+      "/home/andrew/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:15: FutureWarning: \n",
+      ".ix is deprecated. Please use\n",
+      ".loc for label based indexing or\n",
+      ".iloc for positional indexing\n",
+      "\n",
+      "See the documentation here:\n",
+      "http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#ix-indexer-is-deprecated\n",
+      "  from ipykernel import kernelapp as app\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Set blank values for the year 2016 with the value in 2014 and vice versa.\n",
+    "index_non_16 = tobac_price.index[tobac_price['2016'] == '. . .'].tolist()\n",
+    "\n",
+    "\n",
+    "for i in index_non_16:     #x is the given list of indices\n",
+    "    tobac_price.ix[i, '2016'] = tobac_price.ix[i, '2014']\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "index_non_14 = tobac_price.index[tobac_price['2014'] == '. . .'].tolist()\n",
+    "\n",
+    "\n",
+    "for i in index_non_14:     \n",
+    "    tobac_price.ix[i, '2014'] = tobac_price.ix[i, '2016']\n",
+    "    \n",
+    "tobac_price[\"2014\"] = pd.to_numeric(tobac_price[\"2014\"], downcast=\"float\")\n",
+    "tobac_price[\"2016\"] = pd.to_numeric(tobac_price[\"2016\"], downcast=\"float\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tobac_price['Price_2015'] = (tobac_price['2016'] + tobac_price['2014'])/2\n",
+    "tobac_price = tobac_price[['Country', 'Price_2015']]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tobac_price.to_csv(\"data/clean/tobac_price_2015.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "# Tobacco Tax"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +536,7 @@
        "4  Antigua and Barbuda    15.050"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +646,7 @@
        "4       Canada            7.427"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -649,7 +812,7 @@
        "4                                             Yes       . . .  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -661,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -676,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -691,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -700,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -767,7 +930,7 @@
        "4       Angola        3.310"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -785,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -817,7 +980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -836,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -846,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -864,6 +1027,7 @@
     }
    ],
    "source": [
+    "price_countries = tobac_price['Country'].unique()\n",
     "use_countries = tobac_use['Country'].unique()\n",
     "tax_countries = tobac_tax['Country'].unique()\n",
     "happiness_countries = happiness_data['Country'].unique()\n",
@@ -874,6 +1038,7 @@
     "health_countries = health_warn['Country'].unique()\n",
     "smokefree_countries = smokefree_places['Country'].unique()\n",
     "\n",
+    "print(f\"Number of countries in tobacco price table: {len(price_countries)}\")\n",
     "print(f\"Number of countries in tobacco use table: {len(use_countries)}\")\n",
     "print(f\"Number of countries in tobacco tax table: {len(tax_countries)}\")\n",
     "print(f\"Number of countries in happiness table: {len(happiness_countries)}\")\n",
@@ -885,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -898,7 +1063,8 @@
    ],
    "source": [
     "\n",
-    "same_countries = reduce(np.intersect1d, (use_countries,\n",
+    "same_countries = reduce(np.intersect1d, (price_countries,\n",
+    "                                         use_countries,\n",
     "                                         tax_countries,\n",
     "                                         happiness_countries, \n",
     "                                         afford_countries,\n",
@@ -912,7 +1078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -942,7 +1108,7 @@
        "       'Zambia', 'Zimbabwe'], dtype=object)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -953,11 +1119,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_list = [tobac_use, \n",
+    "df_list = [tobac_price,\n",
+    "           tobac_use, \n",
     "           tobac_tax, \n",
     "           happiness_data, \n",
     "           afford_data, \n",
@@ -970,7 +1137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -979,7 +1146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -992,7 +1159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -1017,6 +1184,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Country</th>\n",
+       "      <th>Price_2015</th>\n",
        "      <th>Year</th>\n",
        "      <th>Tobac_Use_M</th>\n",
        "      <th>Tobac_Use_F</th>\n",
@@ -1034,6 +1202,7 @@
        "    <tr>\n",
        "      <td>0</td>\n",
        "      <td>Albania</td>\n",
+       "      <td>1.905</td>\n",
        "      <td>2015</td>\n",
        "      <td>51.2</td>\n",
        "      <td>7.6</td>\n",
@@ -1049,6 +1218,7 @@
        "    <tr>\n",
        "      <td>1</td>\n",
        "      <td>Argentina</td>\n",
+       "      <td>2.220</td>\n",
        "      <td>2015</td>\n",
        "      <td>29.5</td>\n",
        "      <td>18.4</td>\n",
@@ -1064,6 +1234,7 @@
        "    <tr>\n",
        "      <td>2</td>\n",
        "      <td>Armenia</td>\n",
+       "      <td>1.370</td>\n",
        "      <td>2015</td>\n",
        "      <td>52.3</td>\n",
        "      <td>1.5</td>\n",
@@ -1079,6 +1250,7 @@
        "    <tr>\n",
        "      <td>3</td>\n",
        "      <td>Australia</td>\n",
+       "      <td>15.850</td>\n",
        "      <td>2015</td>\n",
        "      <td>16.7</td>\n",
        "      <td>13.1</td>\n",
@@ -1094,6 +1266,7 @@
        "    <tr>\n",
        "      <td>4</td>\n",
        "      <td>Austria</td>\n",
+       "      <td>6.060</td>\n",
        "      <td>2015</td>\n",
        "      <td>35.5</td>\n",
        "      <td>34.8</td>\n",
@@ -1111,19 +1284,19 @@
        "</div>"
       ],
       "text/plain": [
-       "     Country  Year  Tobac_Use_M  Tobac_Use_F  Tax_2015  Happiness_Score  \\\n",
-       "0    Albania  2015         51.2          7.6    65.195            4.959   \n",
-       "1  Argentina  2015         29.5         18.4    75.045            6.574   \n",
-       "2    Armenia  2015         52.3          1.5    34.165            4.350   \n",
-       "3  Australia  2015         16.7         13.1    58.515            7.284   \n",
-       "4    Austria  2015         35.5         34.8    74.835            7.200   \n",
+       "     Country  Price_2015  Year  Tobac_Use_M  Tobac_Use_F  Tax_2015  \\\n",
+       "0    Albania       1.905  2015         51.2          7.6    65.195   \n",
+       "1  Argentina       2.220  2015         29.5         18.4    75.045   \n",
+       "2    Armenia       1.370  2015         52.3          1.5    34.165   \n",
+       "3  Australia      15.850  2015         16.7         13.1    58.515   \n",
+       "4    Austria       6.060  2015         35.5         34.8    74.835   \n",
        "\n",
-       "   Afford_2015  Ban_Score_Dir_Ads  Ban_Score_Indr_Ads  \\\n",
-       "0        3.920                  8                   8   \n",
-       "1        1.310                  7                  10   \n",
-       "2        3.945                  5                   2   \n",
-       "3        2.285                  6                   2   \n",
-       "4        1.225                  7                   8   \n",
+       "   Happiness_Score  Afford_2015  Ban_Score_Dir_Ads  Ban_Score_Indr_Ads  \\\n",
+       "0            4.959        3.920                  8                   8   \n",
+       "1            6.574        1.310                  7                  10   \n",
+       "2            4.350        3.945                  5                   2   \n",
+       "3            7.284        2.285                  6                   2   \n",
+       "4            7.200        1.225                  7                   8   \n",
        "\n",
        "   Ban_Score_add_indir_ads  Warn_Score  Ban_Score_places  \n",
        "0                        3        50.0                 8  \n",
@@ -1133,7 +1306,7 @@
        "4                        5        65.0                 2  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1144,7 +1317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
